--- a/Vertex Model LLT.ipynb
+++ b/Vertex Model LLT.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
      "output_type": "stream",
      "text": [
       "Defining q, t\n",
-      "Defining x1, x2, x3\n"
+      "Defining x1, x2, x3, x4\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
     "F = QQ['q,t']\n",
     "K = FractionField(F)\n",
     "Sym = SymmetricFunctions(K)\n",
-    "nvar = 3 # number of variables\n",
+    "nvar = 4 # number of variables\n",
     "x_var_symbols = var(*['x{0}'.format(i) for i in range(1, nvar+1)])\n",
     "if nvar == 1:\n",
     "    x_var_symbols = (x_var_symbols, )\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,6 @@
    "source": [
     "y_var_symbols = var(*['y{0}'.format(i) for i in range(1, nvar+1)])\n",
     "if nvar == 1:\n",
-    "    x_var_symbols = (x_var_symbols, )\n",
     "    y_var_symbols = (y_var_symbols, )\n",
     "Rxy = LaurentPolynomialRing(K, x_var_symbols+y_var_symbols, 2*nvar, order='lex')\n",
     "Rxy.inject_variables()"
@@ -1000,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 623,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1012,7 @@
     "    desc = []\n",
     "    for i in range(len(sigma)):\n",
     "        for j in range(1,len(sigma[i])):\n",
-    "            if sigma[i][j] < sigma[i][j-1]:\n",
+    "            if sigma[i][j] != None and sigma[i][j] < sigma[i][j-1]:\n",
     "                desc.append((i,j))\n",
     "    return desc\n",
     "    \n",
@@ -1024,80 +1023,193 @@
     "    '''\n",
     "    return sum([ len(sigma[di]) - dj for (di,dj) in descents(sigma) ])\n",
     "\n",
-    "def _coinversion_triples_from_position(sigma, ij):\n",
-    "    ''' Return the coinversion triples at the cell position `(i,j)` in ``sigma``.\n",
+    "def _coinversion_triples_from_position(sigma, k, ij):\n",
+    "    ''' Return the coinversion triples at the cell position `(i,j)` in the \n",
+    "        ``k``-th shape in ``sigma``.\n",
     "        \n",
-    "        Auxiliary function to compute coinversion triples\n",
+    "        Auxiliary function to compute coinversion triples.\n",
     "    '''\n",
     "    bi,bj = ij\n",
-    "    b = sigma[bi][bj]\n",
-    "    same_col = [ (r, bj) for r in range(bi+1,len(sigma))]\n",
+    "    c = bj-bi\n",
+    "    b = sigma[k][bi][bj]\n",
+    "    same_diag = [ (p, (r, c+r)) for p in range(k+1, len(sigma)) for r in range(len(sigma[p]))]\n",
     "    res = []\n",
-    "    for k, (ci,cj) in enumerate(same_col):\n",
-    "        if 0 <= cj < len(sigma[ci]):\n",
-    "            c = sigma[ci][cj]\n",
+    "    for (p, (ci,cj)) in same_diag:\n",
+    "        if 0 <= cj < len(sigma[p][ci]):\n",
+    "            c = sigma[p][ci][cj]\n",
+    "            if c == None:\n",
+    "                c = 0\n",
+    "        elif cj < 0:\n",
+    "            c = 0\n",
     "        else:\n",
     "            c = PlusInfinity()\n",
-    "        if 0 <= cj-1 < len(sigma[ci]):\n",
-    "            a = sigma[ci][cj-1]\n",
+    "        if 0 <= cj-1 < len(sigma[p][ci]):\n",
+    "            a = sigma[p][ci][cj-1]\n",
+    "            if a == None:\n",
+    "                a = 0\n",
     "        elif cj-1 < 0:\n",
     "            a = 0\n",
     "        else:\n",
     "            a = PlusInfinity()\n",
     "        if (a <= b <= c) or (c < a <= b) or (b <= c < a):\n",
-    "            #print \"abc: \", a,b,c\n",
-    "            #print ci, cj\n",
-    "            res.append( (ci,(bi,bj)) )\n",
+    "            res.append( ((p, (ci,cj)) , (k, (bi,bj))) )\n",
     "    return res \n",
     "\n",
     "def coinversion_triples(sigma):\n",
-    "    ''' Return a list of coinversion triples in filling ``sigma``.\n",
+    "    ''' Return a list of coinversion triples in tuple of fillings ``sigma``.\n",
     "        \n",
     "        Output:\n",
-    "            -- list of tuples that are the triples. Each tuple is (k, (i,j))\n",
-    "               where (i,j) is the row,col of the `b` cell in the triple and k is the\n",
-    "               row in sigma containing the `a` and `c` cells.\n",
+    "            -- list of tuples that are the triples. Each tuple is (c, b)\n",
+    "               where c = (cp, (ci,cj)) and (ci, cj) is the row, col in the cp-th shape\n",
+    "               that holds the `c` cell in the triple, and likewise\n",
+    "               b = (bp, (bi, cj)).\n",
     "    '''\n",
     "    coinv = []\n",
-    "    for i in range(len(sigma)):\n",
-    "        for j in range(len(sigma[i])):\n",
-    "            coinv += _coinversion_triples_from_position(sigma, (i,j))\n",
+    "    for p in range(len(sigma)):\n",
+    "        for i in range(len(sigma[p])):\n",
+    "            for j in range(len(sigma[p][i])):\n",
+    "                coinv += _coinversion_triples_from_position(sigma, p, (i,j))\n",
     "    return coinv\n",
     "\n",
     "def coinversions(sigma):\n",
     "    ''' Return number of coinversion triples in filling ``sigma``.\n",
     "    '''\n",
     "    return len(coinversion_triples(sigma))\n",
+    "\n",
+    "def is_admissible(filling):\n",
+    "    ''' Return True if ``filling`` is admissible.\n",
     "    \n",
-    "def LLT_coinv_q(mu):\n",
-    "    ''' Return q-analog of coinversion LLT polynomials.\n",
-    "    \n",
+    "        A filling is ``admissible`` if, when drawn as a vertex configuration,\n",
+    "        there are no vertices with 2 of the same color in it. The configuration allows\n",
+    "        for wrapping of paths.\n",
+    "        \n",
     "        WARNING:\n",
-    "            - Only implemented for when ``mu`` is a tuple of rows.\n",
+    "            - Every admissible filling gives a valid vertex configuration, \n",
+    "              but not every vertex configuration comes from an admissible filling.\n",
     "    '''\n",
-    "    try:\n",
-    "        mu = [row[0] for row in mu]\n",
-    "    except:\n",
-    "        pass\n",
-    "    res = 0\n",
-    "    for w in Words(range(1,nvar+1),length=sum(mu)):\n",
-    "        # get filling\n",
+    "    # (i) check columns are strictly increasing\n",
+    "    admissible = True\n",
+    "    for row, row_above in zip(filling, filling[1:]):\n",
+    "        for j, entry in enumerate(row):\n",
+    "            if entry != None and j < len(row_above) and row_above[j] != None and row_above[j] <= entry:\n",
+    "                admissible = False\n",
+    "                break\n",
+    "                \n",
+    "    # (ii) check that for any descent left(u) > u, \n",
+    "    # the cell left(u) must be larger than all the cells v with the same content as left(u) and above\n",
+    "    # and u must be smaller than all the cells w with the same content as left(u) and below.\n",
+    "    for (i,j) in descents(filling):\n",
+    "        left, u = filling[i][j-1], filling[i][j]\n",
+    "        c = j-i-1\n",
+    "        same_diag = [ (r, c+r) for r in range(len(filling))]\n",
+    "        for (r,s) in same_diag:\n",
+    "            if 0 <= s < len(filling[r]):\n",
+    "                entry = filling[r][s]\n",
+    "            elif r > i:\n",
+    "                entry = PlusInfinity()\n",
+    "            elif r < i:\n",
+    "                entry = 0\n",
+    "            #\n",
+    "            if (r > i) and (entry is not None and left <= entry):\n",
+    "                admissible = False\n",
+    "            if (r < i) and (entry is not None and u >= entry):\n",
+    "                admissible = False\n",
+    "                \n",
+    "    return admissible\n",
+    "\n",
+    "def fillings(mu):\n",
+    "    ''' Return list of admissible fillings on shape ``mu``.\n",
+    "    \n",
+    "        See ``is_admissible`` above for definition of admissible.\n",
+    "        \n",
+    "        Input:\n",
+    "            - ``mu`` - a (skew) partition, possibly with trailing 0's,\n",
+    "                       e.g. [[2,1,0],[1]] or [2,1]\n",
+    "    '''\n",
+    "    if mu == [] or not (isinstance(mu[0], list) or isinstance(mu[0], Partition)):\n",
+    "        mu = [mu, []]\n",
+    "    outer, inner = mu[0], mu[1]\n",
+    "    n_boxes = sum(outer)-sum(inner)\n",
+    "    all_fillings = []\n",
+    "    for w in Words(range(1,nvar+1),length=n_boxes):\n",
     "        w = list(w)\n",
     "        filling = []\n",
     "        j = 0\n",
-    "        for l in reversed(mu):\n",
-    "            filling.append( list(w[j:j+l]) )\n",
-    "            j += l\n",
-    "        filling.reverse()\n",
+    "        for i, row in enumerate(outer):\n",
+    "            if i < len(inner):\n",
+    "                row_filling = [None for p in range(inner[i])]\n",
+    "                row_length = row - inner[i]\n",
+    "            else:\n",
+    "                row_filling = []\n",
+    "                row_length = row\n",
+    "            if row_length == 0:\n",
+    "                row_filling += [None]\n",
+    "            else:\n",
+    "                row_filling += w[j:j+row_length]\n",
+    "            filling.append(row_filling)\n",
+    "            j += row_length\n",
+    "        \n",
+    "        if is_admissible(filling):\n",
+    "            all_fillings.append(filling)\n",
+    "        \n",
+    "    return all_fillings\n",
+    "\n",
+    "def LLT_coinv_q(mu):\n",
+    "    ''' Return q-analog of coinversion LLT polynomials.\n",
+    "    \n",
+    "        Input:\n",
+    "            - ``mu`` - A list of partitions or skew partitions, possibly with trailing 0's, \n",
+    "                       e.g. [[1],[[2,1],[1]],[2,0]]\n",
+    "    '''\n",
+    "    is_iter = lambda a: isinstance(a, list) or isinstance(a, Partition)\n",
+    "    mu = [shape if (len(shape) != 0 and is_iter(shape[0])) else [shape, []] for shape in mu]\n",
+    "    res = 0\n",
+    "    for filling in product(*[fillings(shape) for shape in mu]):\n",
+    "        filling = list(filling)\n",
+    "            \n",
     "        # get statistics\n",
-    "        maj = major_index(filling)\n",
+    "        maj = sum([major_index(f) for f in filling])\n",
     "        coinv = coinversions(filling)\n",
-    "        wt = [0 for i in range(nvar)]\n",
-    "        for i in w:\n",
-    "            wt[i-1] += 1\n",
-    "        wt = pad(wt, nvar)\n",
+    "        weights = [SkewTableau(f).weight() for f in filling]\n",
+    "        wt = [sum([w[i] if i < len(w) else 0 for w in weights]) for i in range(nvar)]\n",
     "        res += (q^maj) * (t^coinv) * R.monomial(*wt)\n",
-    "    return to_sym(res)"
+    "        \n",
+    "        # debug\n",
+    "        #if maj == 1 and coinv == 3:\n",
+    "        #    print filling, \"maj: \", maj, \"coinv: \", coinv, \"wt: \", wt\n",
+    "    return to_sym(res, nvar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing q-LLT\n",
+    "\n",
+    "** Make sure you run the code above first with the defined global variables **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 661,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLT:  q*s[1, 1, 1, 1] + (2*q*t+1)*s[2, 1, 1] + (q*t^2+1)*s[2, 2] + (q*t^2+2*t)*s[3, 1] + t^2*s[4]\n",
+      "q=0:  s[2, 1, 1] + s[2, 2] + 2*t*s[3, 1] + t^2*s[4]\n",
+      "t=0:  q*s[1, 1, 1, 1] + s[2, 1, 1] + s[2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu = [[2], [[2,1],[1]]]\n",
+    "qllt = LLT_coinv_q(mu)\n",
+    "print \"LLT: \", qllt\n",
+    "print \"q=0: \", qllt.map_coefficients(lambda x: x.subs(q=0))\n",
+    "print \"t=0: \", qllt.map_coefficients(lambda x: x.subs(t=0))"
    ]
   },
   {
@@ -1106,33 +1218,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 329,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "q-llt:  (q^4*t^2+q^3*t^2+q^2*t^2+q^2+q)*s[2, 2, 1] + (q^3*t^2+q^3*t+q^2*t^2+q^2*t+q*t^2+q*t)*s[3, 1, 1] + (q^3*t^3+q^2*t^3+q^2*t+q*t+t)*s[3, 2] + (q^2*t^2+q*t^3+q*t^2+t^2)*s[4, 1] + t^3*s[5]\n",
-      "H:  (q^4*t^2+q^3*t+q^2*t+q^2+q)*s[2, 2, 1] + (q^3*t^2+q^3*t+2*q^2*t+q*t+q)*s[3, 1, 1] + (q^3*t^2+q^2*t^2+q^2*t+q*t+1)*s[3, 2] + (q^2*t^2+q*t^2+q*t+t)*s[4, 1] + t^2*s[5]\n",
-      "diff:  (q^3*t^2-q^3*t+q^2*t^2-q^2*t)*s[2, 2, 1] + (q^2*t^2-q^2*t+q*t^2-q)*s[3, 1, 1] + (q^3*t^3-q^3*t^2+q^2*t^3-q^2*t^2+t-1)*s[3, 2] + (q*t^3-q*t+t^2-t)*s[4, 1] + (t^3-t^2)*s[5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "H = Sym.macdonald().H() # H\n",
-    "Ht = Sym.macdonald().Ht() # H tilde\n",
-    "\n",
-    "mu = [3,2]\n",
-    "mu_sort = sorted(mu, reverse=True)\n",
-    "\n",
-    "print \"q-llt: \", LLT_coinv_q(mu)\n",
-    "print \"H: \", s(H(mu_sort)).restrict_partition_lengths(nvar, exact=False)\n",
-    "print \"diff: \", LLT_coinv_q(mu) - s(H(mu_sort)).restrict_partition_lengths(nvar, exact=False)"
-   ]
   },
   {
    "cell_type": "code",
